# pessulus

./: .cvsignore  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  pessulus.doap  pessulus.in
Pessulus/: .cvsignore  Makefile.am  config.py.in  disabledapplets.py  gconfcheckbutton.py  gconfutils.py  icons.py  lockdownappliergconf.py  lockdownbutton.py  lockdowncheckbutton.py  main.py  maindialog.py  safeprotocols.py  simpleeditabletreeview.py
data/: .cvsignore  Makefile.am  pessulus.desktop.in.in  pessulus.glade
po/: ChangeLog  ChangeLog.pre-git  LINGUAS  POTFILES.in  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  hy.po  id.po  it.po  ja.po  kn.po  ko.po  (+40 more)
